# hackathon

./: .git-commit-message.txt  .vercelignore  BACKEND_FIXES_APPLIED.md  BACKEND_FIX_SUMMARY.md  BACKEND_SETUP.md  CO_ZROBILEM_CO_NIE.md  CREATE_ENV_FILE.sh  DATABASE_SCHEMA_FIX.md  DEBUG_PENSION_CALCULATION.md  DEPLOYMENT.md  EXCEL_EXPORT_FIX.md  FINAL_INTEGRATION_REPORT.md  FINAL_SUMMARY.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  PENSION_CALCULATION_INTEGRATION.md  PROBLEM_ANALYSIS_REPORT.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  TEST_INTEGRATION.sh  openapi.json  poland_average_salary_growth_1995_2080.json  poland_inflation_yoy_1995_2080.json  pyproject.toml  vercel.json
.github/workflows/: ci.yml
backend/: .gitignore  README.md  START_BACKEND.sh  alembic.ini  pyproject.toml  statistics.json
backend/alembic/: env.py
backend/alembic/versions/: 1d409c9c6c98_add_calculation_model.py  3c7735fad074_add_calculation_model.py  4ef1356ae538_initial_migration.py  f093b4da986c_initial_schema_with_dbcalculation.py
backend/src/hackathon/: algorithm.py  gemini_client.py  main.py  mapper.py  models.py  schemas.py
frontend/: .vercelignore  ENV_SETUP.md  ENV_VARIABLES.md  FONTS-INFO.md  IMPLEMENTATION-NOTES.md  SIMULATOR-ROADMAP.md  next.config.ts  package-lock.json  package.json  vercel.json
frontend/memory-bank/: 00-ACTUAL-PROJECT.md  01-project-overview.md  02-routing-navigation.md  03-design-system.md  04-data-model.md  05-state-architecture.md  06-features.md  07-performance.md  08-accessibility.md  09-testing-i18n.md  10-fixtures.md  12-implementation-summary.md  (+6 more)
(+63 files in other folders)
