[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hackathon", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.11.10,<3.0.0"
fastapi = {extras = ["standard"], version = ">=0.118.0,<1.0.0"}
databases = ">=0.8.0,<1.0.0"
aiosqlite = ">=0.19.0,<1.0.0"
alembic = ">=1.16.5,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
openpyxl = ">=3.1.0,<4.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
google-generativeai = ">=0.8.0,<1.0.0"
requests = ">=2.31.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.scripts]
hackathon-api = "hackathon.main:main"
